# isolated-lambas

./: README.md  run-tests.sh
helper-scripts/: build-images.sh  install.sh  run-tests.sh
lambdas/lambda-1/: Dockerfile  Pipfile  pyproject.toml
lambdas/lambda-1/src/: requirements.txt
lambdas/lambda-1/tests/: test_handler.py
lambdas/lambda-2/: Pipfile  pyproject.toml  setup.py
lambdas/lambda-2/src/: handler.py  requirements.txt
lambdas/lambda-2/tests/: test_handler.py
