[tool.poetry]
name = "lambda-1"
version = "0.1.0"
description = ""
authors = ["Neil Ferreira <root@neilf.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.0"
pydicom = "2.4.2"


[tool.poetry.group.shared.dependencies]
boto3 = "^1.28.32"


[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
