[tool.poetry]
name = "lambda-2"
version = "0.1.0"
description = ""
authors = ["Neil Ferreira <root@neilf.net>"]

[tool.poetry.dependencies]
python = "3.11.0"
pydicom = "2.4.0"


[tool.poetry.group.shared.dependencies]
boto3 = "^1.28.32"


[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["src"]
